2009-10-07 Magnus Hagdorn
 * libglint/Makefile.am: forgot to add module directory
 * m4macros/hdf5.m4: improved hdf5 detector, it's similar to the netcdf one
 * m4macros/netcdf.m4: change how HDF5 libraries are handled
 * scripts/glide_launch.py: fix location of SGE submission script
 * tests/exact-isothermal/scripts/run_verif.py: ditto
 * tests/exact-isothermal/tests/Makefile.am: add SGE options

2009-09-30 Magnus Hagdorn
 * configure.in: export fortran compiler flag which sets the module search
   path
 * example-drivers/EISMINT-3/src/Makefile.am: use new variable containing
   fortran compiler flag for module search path and use correct variable
   for fortran netcdf module search path
 * example-drivers/eis/src/Makefile.am: ditto
 * example-drivers/glint/src/Makefile.am: ditto
 * libglide/Makefile.am: ditto
 * libglimmer/Makefile.am: ditto
 * libglimmer-solve/Makefile.am: ditto
 * libglint/Makefile.am: ditto
 * tests/EISMINT/src/Makefile.am: ditto
 * tests/exact-isothermal/src/Makefile.am: ditto

2009-09-30 Magnus Hagdorn
 * m4macros/netcdf.m4: bah, introduced bug when no particular directory is
   specified - fixed now 

2009-09-30 Magnus Hagdorn
 * m4macros/netcdf.m4: fix bug when location of netCDF lib is specified
   manually

2009-09-29 Magnus Hagdorn
 * libglimmer/glimmer_commandline.F90: add doxygen strings
 * libglimmer/glimmer_config.F90: ditto
 * libglimmer/glimmer_ts.F90: minor fix

2009-09-28 Ian Rutt
 * libglide/glide.F90: Fixed bug with basal heat flux - field read from
   file was being overridden with constant value. Reordered code, but
   still not ideal, as overriding will happen the other way round now.
 * doc/num/temp_solve.tex: Added a file with the beginnings of a new, more
   detailed description of the temperature solver (something I was
   working on last year, but didn't finish). Not integrated into the main
   docs yet.
	
2009-09-28 Magnus Hagdorn
 * example-drivers/EISMINT-3/src/eismint3_glide.F90: setup config file directory