@@ -15,31 +15,29 @@ CLEANFILES = $(all_tests)
 
 all_tests = $(test_b) $(test_c) $(test_d)
 
-plots:		vole_c.ps vole_d.ps errors.ps time.ps
-png:		vole_c.png vole_d.png errors.png time.png $(subst nc,png,$(all_tests))
+graphics:	vole_c.png vole_d.png errors.png time.png $(subst nc,png,$(all_tests))
 
-errors.ps:	$(all_tests)
-		$(PYTHON) $(top_srcdir)/src/python/plot_errors.py $^ $@
+errors.png:	$(all_tests)
+		$(PYTHON) $(top_srcdir)/tests/exact-isothermal/scripts/plot_errors.py -o $@ $^
 
-time.ps:	data
-		$(PYTHON) $(top_srcdir)/src/python/plot_time.py $^ $@
+time.png:	results
+		$(PYTHON) $(top_srcdir)/tests/exact-isothermal/scripts/plot_time.py -o $@ $^
 
-vole_b.ps:	$(test_b)
-		$(PYTHON) $(top_srcdir)/src/python/plot_vol.py $^ $@
+vole_b.png:	$(test_b)
+		$(PYTHON) $(top_srcdir)/tests/exact-isothermal/scripts/plot_vol.py -o $@ $^
 
-vole_c.ps:	$(test_c)
-		$(PYTHON) $(top_srcdir)/src/python/plot_vol.py $^ $@
+vole_c.png:	$(test_c)
+		$(PYTHON) $(top_srcdir)/tests/exact-isothermal/scripts/plot_vol.py -o $@ $^
 
-vole_d.ps:	$(test_d)
-		$(PYTHON) $(top_srcdir)/src/python/plot_vol.py $^ $@
+vole_d.png:	$(test_d)
+		$(PYTHON) $(top_srcdir)/tests/exact-isothermal/scripts/plot_vol.py -o $@ $^
 
-data:		$(all_tests)
+results:	$(all_tests)
 
-%.ps:	%.nc
-	$(PYTHON) $(top_srcdir)/src/python/plot_diff.py -T-1 $< $@
+%.png:	%.nc
+	$(PYTHON) $(top_srcdir)/tests/exact-isothermal/scripts/plot_diff.py -T-1 -o $@ $< 
 
 %.nc:	$(top_srcdir)/tests/exact-isothermal/tests/template.config
 	$(PYTHON) $(top_srcdir)/tests/exact-isothermal/scripts/run_verif.py -m ../src/verif_glide @SGE_OPTS@ -f $* $<
 
-%.png:	%.ps
-	$(CONVERT) -trim $< $@
+
